--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,25 +1,4 @@
-.table_container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.table-button{
-    display: flex;
-    gap: 10px;
-}
-.stack{
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px;
-}
-.edit-textfield{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
-}
-
-.main-nav {
+.home-nav {
     width: 100%;
     height: 6rem;
     position: fixed;
@@ -31,20 +10,20 @@
     z-index: 1;
   }
 
-  .nav-heading{
+  .home-heading{
     display: flex;
     align-items: center;
     grid-column: 2/3;
   }
 
-  .logout-button{
+  .login-button1{
     display: flex;
     justify-content: flex-end;
     align-items: center;
     grid-column: 3/4;
   }
 
-  .scroll{
+  .home-scroll{
     background-color: white;
     width:90%;
     height:100%;
@@ -54,14 +33,7 @@
     flex-direction: column; */
     /* text-align: left; */
     padding: 50px;
-    box-shadow: 0 0 10px -1px rgba(0,0,0,0.34);
+    /* box-shadow: 0 0 10px -1px rgba(0,0,0,0.34); */
     overflow-x: auto;
     overflow-y: auto;
-  }
-
-  .alert-container{
-    position: fixed;
-    top: 100px;
-    right: 20px;
-    z-index: 99;
   }
